yaml_files/nebula/07-service-ra.yaml
kind: Service
apiVersion: v1
metadata:
  name: resourceallocation
  namespace: resourceallocation
spec:
  ports:
    - port: 8888
      targetPort: 8888
      protocol: TCP
  selector:
    component: resourceallocation
