yaml_files/nebula/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: resourceallocation
  namespace: resourceallocation
spec:
  ports:
    - port: 8888
      targetPort: 8888
      nodePort: 30000
      protocol: TCP
  selector:
    component: resourceallocation
  type: NodePort
