yaml_files/nebula/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: resourceallocation
 namespace: resourceallocation
 annotations:
   kubernetes.io/ingress.class: "nginx" 
spec:
  rules:
  - http:
     paths:
     - path: /lsstsim
       backend:
         serviceName: resourceallocation
         servicePort: 8888
